crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__header_title_only.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
assertion_line: 74
expression: s
---
 Settings
