crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__header_title_subtitle_and_hint.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
assertion_line: 66
expression: s
---
 Peer Settings  —  carbon.peer                   [Esc back]
