crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__header_wide_40.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
expression: s
---
 Session Settings  —  研 究 室  [Esc back]
