crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__inline_edit_prompt_cursor_at_end.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
assertion_line: 103
expression: s
---
 model: deepseek/v4▎
