crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__inline_edit_prompt_cursor_mid_string.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
assertion_line: 95
expression: s
---
 name: av▎a
