crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__picker_empty_list_no_matches.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
assertion_line: 142
expression: s
---
 add agent: xyz▎                        
  (no matches)                          
                                        
  ↑↓ select · enter add · esc cancel
