crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__picker_filter_typed_one_match.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
expression: s
---
 add agent: ch▎                         
  > chaz                                
                                        
                                        
  ↑↓ select · enter add · esc cancel
