crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__picker_last_24x2.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
expression: s
---
 add agent: ▎           
  > agent-19
