crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__picker_last_80x8.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
expression: s
---
 add agent: ▎                                                                   
    agent-14                                                                    
    agent-15                                                                    
    agent-16                                                                    
    agent-17                                                                    
    agent-18                                                                    
  > agent-19                                                                    
  ↑↓ select · enter add · esc cancel
