crates/bin/src/bridge/tui/widgets/snapshots/chaz__bridge__tui__widgets__snapshot_tests__picker_populated_list_second_selected.snap
---
source: crates/bin/src/bridge/tui/widgets/snapshot_tests.rs
expression: s
---
 add agent: ▎                           
    chaz                                
  > scout                               
    researcher                          
                                        
  ↑↓ select · enter add · esc cancel
